Alternative overflow fix; Code block enhance
Details:
 - Apply alternative way to fix grid overflowing issue (fix on grid
   element instead of applying extra flex layer)
 - Enhanced code block with extra options:
    - Line number, and start point when it's enabled
    - Maximum number of lines shown in the block with scroller
    - File meta for plugin usage

--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -78,6 +78,7 @@ body {
 
   & > * {
     box-sizing: border-box;
+    min-width: 0;
   }
 }
 
@@ -223,8 +224,6 @@ body {
 }
 
 .preview-content {
-  display: flex;
-  flex-direction: row;
   margin: 4px;
   border-width: 1px;
   border-style: dotted;
